--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 dependencies {
     testImplementation "com.codeborne:selenide:5.20.1"
     testImplementation "com.codeborne:pdf-test:1.5.1"
+    testImplementation "com.codeborne:xls-test:1.4.3"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
