--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ dependencies {
     testImplementation "com.codeborne:xls-test:1.4.3"
     testImplementation "net.lingala.zip4j:zip4j:1.3.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "org.slf4j:jcl-over-slf4j:1.7.30"
+    testImplementation "org.apache.poi:poi-scratchpad:3.9"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
 
