--- a/build.gradle
+++ b/build.gradle
@@ -7,18 +7,19 @@ repositories {
 }
 
 dependencies {
-    testImplementation "com.codeborne:selenide:5.20.1"
-    testImplementation "com.codeborne:pdf-test:1.5.1"
-    testImplementation "com.codeborne:xls-test:1.4.3"
-    testImplementation "net.lingala.zip4j:zip4j:1.3.2"
-    testImplementation "org.hamcrest:hamcrest-all:1.3"
-    testImplementation "org.slf4j:jcl-over-slf4j:1.7.30"
-    testImplementation "org.apache.poi:poi-scratchpad:3.9"
+    testImplementation ("com.codeborne:selenide:5.20.1",
+                        "com.codeborne:pdf-test:1.5.1",
+                        "com.codeborne:xls-test:1.4.3",
+                        "net.lingala.zip4j:zip4j:1.3.2",
+                        "org.hamcrest:hamcrest-all:1.3",
+                        "org.slf4j:jcl-over-slf4j:1.7.30",
+                        "org.apache.poi:poi-scratchpad:3.9")
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
+}
 
-    compileJava.options.encoding = "UTF-8"
-    compileTestJava.options.encoding = "UTF-8"
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 test {
