--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ repositories {
 
 dependencies {
     //compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.0.0'
-    //compile group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
+    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
     testImplementation(
             "org.junit.jupiter:junit-jupiter-api:5.6.0",
             "com.codeborne:selenide:5.20.1",
