--- a/build.gradle
+++ b/build.gradle
@@ -7,19 +7,17 @@ repositories {
 }
 
 dependencies {
-    //compile group: 'org.apache.poi', name: 'poi-scratchpad', version: '5.0.0'
-    compile group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'
     testImplementation(
             "org.junit.jupiter:junit-jupiter-api:5.6.0",
             "com.codeborne:selenide:5.20.1",
             "org.hamcrest:hamcrest-all:1.3",
+            "org.apache.poi:poi-ooxml:5.0.0",
+            "org.apache.poi:poi:5.0.0",
+            "org.apache.poi:poi-scratchpad:5.0.0",
             "com.codeborne:pdf-test:1.5.1",
             "com.codeborne:xls-test:1.4.3",
             "net.lingala.zip4j:zip4j:1.3.2",
-            "org.apache.poi:poi:5.0.0",
-            "org.apache.poi:poi-scratchpad:5.0.0",
-            "org.apache.poi:poi-ooxml:5.0.0")
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
+    )
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
 }
 
